# f1-pivot-table

./: .env  .gitignore  README.md  app.js  config.js  index.html  package.json  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
backend/: README.md  main.py  pyproject.toml
backend/queries/: default-query.sql  default-query_2.sql  default-query_old.sql
css/: styles.css
data/: megaquery_2.sql
frontend/: index.html  proxy_server.py  readme.md
frontend copy/: app.js  config.js  config_2.js  index.html  proxy_server_bkp.py  secure_proxy_server.py  styles.css
frontend/css/: styles.css  styles_fm.css
frontend/data/: sample.csv
frontend/js/: app.js  app_2.js  app_bkp1.js  config.js
js/: app.js  app_2.js
older_versions/: app.js  styles_2.css
